# xch

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
src/: error.rs  lib.rs  main.rs  non_atomic.rs
src/platform/: linux.c  linux.rs  mod.rs  not_implemented.rs  windows.rs
tests/: tests.rs  util.rs
