[package]
name = "xch"
version = "0.2.2-alpha.0"
authors = ["WanzenBug <moritz.wanzenboeck@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/WanzenBug/xch"
documentation = "https://docs.rs/xch"
description = """
A CLI utility and rust crate to atomically swap the content of two paths.
"""

categories = ["filesystem"]
keywords = ["fs", "file", "filesystem", "cli"]

[features]
nightly = ["syscall"]

[lib]
name = "libxch"
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "xch"
doc = false

[target.'cfg(windows)'.dependencies]
winapi = "^0.2.8"
kernel32-sys = "^0.2.2"
ktmw32-sys = "^0.1.0"

[target.'cfg(unix)'.dependencies]
libc = "^0.2.37"

[target.'cfg(target_os = "linux")'.dependencies]
syscall = { version = "^0.2.1", optional = true }

[dependencies]
clap = "^2.30.0"
errno = "^0.2.3"
cfg-if = "^0.1"
uuid = { version = "^0.6.0", features = ["v4"] }

[dev-dependencies]
tempdir = "^0.3"

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
pre-release-replacements = [
    {file="README.md", search="Current release: [a-z0-9\\.-]+", replace="Current release: {{version}}"},
    {file="README.md", search="xch = \"[a-z0-9\\.-]+\"", replace="xch = \"{{version}}\""},
    {file="CHANGELOG.md", search="## \\[Unreleased\\] -- [0-9]+-[0-9]+-[0-9]+", replace="## [Unreleased] -- {{date}}\n\n## [{{version}}] -- {{date}}"},
]
