[package]
name = "xch"
version = "0.2.2-alpha.0"
authors = ["WanzenBug <moritz@wanzenbug.xyz>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/WanzenBug/xch"
documentation = "https://docs.rs/xch"
edition = "2018"
description = """
A CLI utility and rust crate to atomically swap the content of two paths.
"""

categories = ["filesystem"]
keywords = ["fs", "file", "filesystem", "cli"]

[features]
nightly = ["syscall", "errno"]

[lib]
name = "libxch"
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "xch"
doc = false

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3.8", features = ["handleapi", "ktmw32"] }

[target.'cfg(unix)'.dependencies]
libc = "^0.2.37"

[target.'cfg(target_os = "linux")'.dependencies]
syscall = { version = "^0.2.1", optional = true }
errno = {version = "^0.2.3", optional = true }

[dependencies]
uuid = { version = "^0.7", features = ["v4"] }

[dev-dependencies]
tempdir = "^0.3"

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
pre-release-replacements = [
    {file="README.md", search="Current release: [a-z0-9\\.-]+", replace="Current release: {{version}}"},
    {file="README.md", search="xch = \"[a-z0-9\\.-]+\"", replace="xch = \"{{version}}\""},
    {file="CHANGELOG.md", search="## \\[Unreleased\\] -- [0-9]+-[0-9]+-[0-9]+", replace="## [Unreleased] -- {{date}}\n\n## [{{version}}] -- {{date}}"},
]
