[package]
name = "xch"
version = "1.1.1-alpha.0"
authors = ["WanzenBug <moritz@wanzenbug.xyz>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/WanzenBug/xch"
documentation = "https://docs.rs/xch"
edition = "2018"
description = """
A CLI utility and rust crate to atomically swap the content of two paths.
"""
build = "build.rs"

categories = ["filesystem"]
keywords = ["fs", "file", "filesystem", "cli"]

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
pre-release-replacements = [
    {file="README.md", search="Current release: [a-z0-9\\.-]+", replace="Current release: {{version}}"},
    {file="README.md", search="xch = \"[a-z0-9\\.-]+\"", replace="xch = \"{{version}}\""},
    {file="CHANGELOG.md", search="## \\[Unreleased\\] -- [0-9]+-[0-9]+-[0-9]+", replace="## [Unreleased] -- {{date}}\n\n## [{{version}}] -- {{date}}"},
]

[lib]
name = "libxch"
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "xch"
doc = false

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "^0.3.8", features = ["handleapi", "ktmw32"] }

[target.'cfg(target_os = "linux")'.dependencies]
errno = "^0.2.4"

[target.'cfg(target_os = "linux")'.build-dependencies]
cc = "1.0"

[dependencies]
uuid = { version = "^0.8", features = ["v4"] }

[dev-dependencies]
tempdir = "^0.3"
